--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="flex flex-col bg-[#101526] text-[#6dbecf] font-mono m-0 h-screen w-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
